--- a/src/main/resources/static/res/css/reset.css
+++ b/src/main/resources/static/res/css/reset.css
@@ -13,7 +13,7 @@ a:focus{outline:none;}
 .relative{position:relative;}
 .hidden{display:none;}
 .center-block{margin-left:auto;margin-right:auto;}
-.color-oc{color:#0089D2;}
+.color-oc{color:#009688;}
 .color-fff{color:#FFF}
 .wrap-h{height: 100%;}
 .f-16{font-size: 16px;}
@@ -23,9 +23,9 @@ a:focus{outline:none;}
 .mb-5{margin-bottom:5px;}
 .mb-10{margin-bottom:10px;}
 .mb-20{margin-bottom:20px;}
-.oc-color-hover:hover{color: #0089D2;}
+.oc-color-hover:hover{color: #009688;}
 .link-a{color:#4d555d;text-decoration: none;}
-.link-a:HOVER{color: #0089D2;}
+.link-a:HOVER{color: #009688;}
 .ellipsis{display:block;white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
 .split-line{
 	width:100%;
@@ -35,7 +35,7 @@ a:focus{outline:none;}
 }
 .btn{
 	width: 80px;
-	background-color: #0089D2;
+	background-color: #009688;
 	text-align: center;
 	color: #FFF;
 	border-radius:4px;
@@ -58,8 +58,8 @@ a:focus{outline:none;}
 */
 .f-header{
 	width: 100%;
-	height: 80px;
-	background-color:#E6E6E6;
+	height: 65px;
+	background-color:#3d444c;
 }
 .f-header-box{
 	width: 1200px;
@@ -77,7 +77,7 @@ a:focus{outline:none;}
 .header-nav{
 	width: auto;
 	height: 34px;
-	margin-top: 30px;
+	margin-top: 20px;
 	float: left;
 }
 .header-nav-item{
@@ -89,11 +89,11 @@ a:focus{outline:none;}
 	font-size: 16px;
 	margin-left: 10px;
 	margin-right: 10px;
-	color:#000;
+	color:#fff;
 }
 .header-nav-item:hover{
 	border-radius: 3px;
-	color: #0089D2;
+	color: #009688;
 	cursor: pointer;
 }
 .header-nav-item.cur{
@@ -168,7 +168,7 @@ a:focus{outline:none;}
 	width: 200px;
 	height: 50px;
 	line-height: 50px;
-	background-color: #0089D2;
+	background-color: #009688;
 	margin:0 auto;
 	text-align: center;
 	color: #FFF;
@@ -180,7 +180,7 @@ a:focus{outline:none;}
 	padding-top:20px;
 	width: 100%;
 	height: 150px;
-	background-color: #777777;
+	background-color: #3d444c;
 }
 
 .f-footer-box{
@@ -298,7 +298,7 @@ a:focus{outline:none;}
 	color: #000;
 }
 .main-category-submenu-content a:HOVER{
-	color: #0089D2;
+	color: #009688;
 }
 
 .f-nav-box{
@@ -447,7 +447,7 @@ a:focus{outline:none;}
 }
 
 .gray-bg {
-    background-color: #CCC;
+    background-color: #009688;
 }
 
 .types-content-left {
@@ -611,7 +611,7 @@ a:focus{outline:none;}
     display: inline-block;
     border-radius:4px;
     text-align: center;
-    background-color: #0089D2;
+    background-color: #009688;
     color: #FFF;
     width: 137px;
     height: 48px;
@@ -640,10 +640,10 @@ a:focus{outline:none;}
 	display: inline-block;
 }
 .course-menu .cur{
-	color:#0089D2; 
+	color:#009688;
 }
 .course-menu span:hover{
-	color: #0089D2;
+	color: #009688;
 }
 .chapter {
 	padding: 0px 10px 20px 10px;
@@ -700,7 +700,7 @@ a:focus{outline:none;}
 	width: 80px;
 	float: right;
 	line-height: 25px;
-	background-color: #0089D2;
+	background-color: #009688;
 	text-align: center;
 	color: #FFF;
 	margin-top: 8px;
@@ -756,7 +756,7 @@ a:focus{outline:none;}
 	color: #93999f;
 }
 .comment-main .comment-footer a:hover{
-	color: #0089D2;
+	color: #009688;
 }
 /**
 *评论-end
@@ -777,7 +777,7 @@ a:focus{outline:none;}
 	list-style-type: none;
 }
 .video-li:hover{
-	color: #0089D2;
+	color: #009688;
 }
 .video-course-fix-parent{
 	height: 500px;
@@ -838,7 +838,7 @@ a:focus{outline:none;}
 	color: #4d555d;
 }
 .course-nav-item a:hover{
-	color:#0089D2;
+	color:#009688;
 	font-size: 14px;
 }
 /**
@@ -875,7 +875,7 @@ a:focus{outline:none;}
 	padding:0px;
 }
 .user-menu-nav-cur{
-	background-color: #0089D2;
+	background-color: #009688;
 	color: #FFF;
 	height: 50px;
 	line-height: 50px;
@@ -1041,13 +1041,13 @@ a:focus{outline:none;}
 	width: 80px;
 	height:30px;
 	line-height:30px;
-	border: 1px solid #0089D2;
+	border: 1px solid #009688;
 	text-align: center;
 	cursor: pointer;
 	color: #000;
 }
 .continue-btn:hover{
-	background-color: #0089D2;
+	background-color: #009688;
 	color:#FFF;
 }
 
