--- a/src/main/resources/static/res/css/style.css
+++ b/src/main/resources/static/res/css/style.css
@@ -110,15 +110,15 @@ hr {
 	z-index: 20;
 	margin: 0px;
 	padding: 0px;
-	height: 70px;
-	line-height: 70px;
-	background: #03060A;
+	height: 65px;
+	line-height: 65px;
+	background: #3d444c;
 	border-radius: 0px;
 }
 
 .navbar .navbar-inner {
-	height: 70px;
-	background: #03060A;
+	height: 65px;
+	background: #3d444c;
 	margin: 0px;
 	border: 0px;
 	border-bottom: none;
@@ -1049,7 +1049,7 @@ table.table.list tr:first-child td {
 	min-width: 80px;
 	height:30px;
 	line-height:30px;
-	background-color: #0089D2;
+	background-color: #009688;
 	text-align: center;
 	color: #FFF;
 	border-radius:4px;
